use IGroup in DiscussionsComponent by making a dummy IGroup object/object list in ngOnInit, then using that list to populate the HTML template. Not working completely yet

--- a/src/app/card/group-card/group-card.component.html
+++ b/src/app/card/group-card/group-card.component.html
@@ -1,8 +1,10 @@
 <div class="sub-card"
+     *ngIf="group"
      mat-ripple>
 
-  <app-card title="InsightDiscussionForum"
-            subtitle="Followers: 8000">
+  <app-card [title]="group.title"
+            [subtitle]= "group.body"
+  >
   </app-card>
 </div>
 
