--- a/src/app/page/discussions/discussions.component.html
+++ b/src/app/page/discussions/discussions.component.html
@@ -44,7 +44,7 @@
       <input matInput type="search"
               name="search"
               placeholder="Search">
-      <mat-hint align="start">Find Groups </mat-hint>
+      <mat-hint align="start">Find Groups</mat-hint>
   </mat-form-field>
 
   <button mat-icon-button
@@ -54,15 +54,14 @@
   </button>
 </div>
 
-
-<div class="section-main">
-
+<div class="section-main" ngIf = "groups">
     <div class="rl-header header">
         Groups
     </div>
-
-    <div class="margin-card">
-        <app-group-card></app-group-card>
+    
+    <div *ngFor="let group of groups" class="margin-card">
+        <app-group-card [group]="group">    
+        </app-group-card>
     </div>
 
 </div>
