--- a/src/app/page/discussions/discussions.component.html
+++ b/src/app/page/discussions/discussions.component.html
@@ -55,14 +55,13 @@
 </div>
 
 
-<div class="section-main">
-
+<div class="section-main" >
     <div class="rl-header header">
         Groups
     </div>
 
     <div class="margin-card">
-        <app-group-card></app-group-card>
+        <app-group-card [group]="group"></app-group-card>
     </div>
 
 </div>
