Update dummy data-loading code in DiscussionsComponent
A function now populates the groups variable which would otherwise be populated by an API call in a completely made component.

--- a/src/app/layout/navmenu/navmenu.component.html
+++ b/src/app/layout/navmenu/navmenu.component.html
@@ -75,7 +75,7 @@
 <a [routerLink]="['/discussions']"
    routerLinkActive="active-link"
    mat-list-item>
-    <mat-icon>done_all</mat-icon> &nbsp; Discussions
+    <mat-icon>groups</mat-icon> &nbsp; Discussions
 </a>
 
 <a [routerLink]="['/achievements']"
