Fixed group-not-loading error
The groups array was not initialised, hence the problem

--- a/src/app/page/discussions/discussions.component.html
+++ b/src/app/page/discussions/discussions.component.html
@@ -54,14 +54,16 @@
   </button>
 </div>
 
-<div class="section-main" ngIf = "groups">
+<div class="section-main" *ngIf = "groups">
     <div class="rl-header header">
         Groups
     </div>
     
-    <div *ngFor="let group of groups" class="margin-card">
-        <app-group-card [group]="group">    
-        </app-group-card>
+    <div>
+        <div *ngFor="let group of groups" class="margin-card">
+            <app-group-card [group]="group">    
+            </app-group-card>
+        </div>
     </div>
 
 </div>
