--- a/src/app/page/discussions/discussions.component.css
+++ b/src/app/page/discussions/discussions.component.css
@@ -8,7 +8,7 @@
 }
 
 .margin-card {
-    background-color: #f2f2f2;
+    background-color:#0D4BA8;
     border-radius: 4px;
     width: 42%;
     margin-bottom: 0.5em;
