Added the icon on each group card. Also added an image_url field to IGroup

--- a/src/app/card/group-card/group-card.component.html
+++ b/src/app/card/group-card/group-card.component.html
@@ -4,6 +4,7 @@
 
   <app-card [title]="group.title"
             [subtitle]= "group.body"
+            [avatar]="group.image_url"
   >
   </app-card>
 </div>
