--- a/src/app/card/post-card/post-card.component.html
+++ b/src/app/card/post-card/post-card.component.html
@@ -1,1 +1,10 @@
-<p>post-card works!</p>
+<div class="sub-card"
+     *ngIf="post"
+     mat-ripple>
+
+  <app-card [title]="post.title"
+            [subtitle]= "post.body"
+  >
+
+  </app-card>
+</div>
