Add multiple posts to feed
Used post-card component and populated feed page with a multiple of them

--- a/src/app/page/discussions/group-feed/group-feed.component.html
+++ b/src/app/page/discussions/group-feed/group-feed.component.html
@@ -1,1 +1,8 @@
-<p>group-feed works!</p>
+<div>
+    <div *ngFor="let post of posts">
+        <app-post-card
+        >
+
+        </app-post-card>
+    </div>
+</div>
