Update post card and use in feed
The feed page now looks more closer to reality with the inclusion of post cards with an author and some content

--- a/src/app/card/post-card/post-card.component.html
+++ b/src/app/card/post-card/post-card.component.html
@@ -1,1 +1,10 @@
-<p>post-card works!</p>
+<div class="sub-card"
+     *ngIf="post"
+     mat-ripple>
+
+  <app-card [title]="post.author.name"
+            [subtitle]= "post.content"
+  >
+
+  </app-card>
+</div>
