--- a/src/app/page/discussions/group-feed/group-feed.component.html
+++ b/src/app/page/discussions/group-feed/group-feed.component.html
@@ -1,6 +1,7 @@
 <div>
     <div *ngFor="let post of posts">
         <app-post-card
+            [post]="post"
         >
 
         </app-post-card>
