feat(community): add community list page and community description page
- add community list page and description page in split desktop
- add extra css in split desktop to provide different size spliting
- add post card and community card to support list view of post feed page and multiple groups page

--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -11,15 +11,22 @@
             <p>
               {{ title }}
             </p>
+            <p *ngIf="followers" class="followers_posts">
+              {{ followers }} followers
+            </p>
             <p class="card-sub-title">
               {{ subtitle }}
             </p>
           </div>
         </td>
 
+
         <td *ngIf="badge" class="badge">
           <img [src]="badge" class="img-circle object-cover" />
         </td>
+
+
+
       </tr>
     </tbody>
   </table>
