--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,24 +9,29 @@
     padding-bottom: 0;
 }
 
-#router-out, .example-toolbar {
+#router-out,
+.example-toolbar {
     width: calc(100% - 20vw);
     margin-left: 20vw;
 }
 
 #top-gap {
-    height: 64px;
+    height: 50px;
 }
 
 @media (max-width: 1200px) {
-    #router-out, .example-toolbar {
+
+    #router-out,
+    .example-toolbar {
         width: calc(100% - 240px);
         margin-left: 240px;
     }
 }
 
 @media (max-width: 960px) {
-    #router-out, .example-toolbar {
+
+    #router-out,
+    .example-toolbar {
         width: 100%;
         margin-left: 0;
         margin-top: 0;
@@ -35,7 +40,7 @@
 
 @media (max-width: 600px) {
     #top-gap {
-        height: 56px;
+        height: 44px;
     }
 }
 
@@ -63,6 +68,7 @@
 :focus {
     outline: none;
 }
+
 ::-moz-focus-inner {
     border: 0;
 }
