--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -32,11 +32,18 @@ div.content p {
     width: calc(100% - 2em);
 }
 
+
+
 .card-sub-title {
-    color: gray;
-    white-space: nowrap;
+    /* white-space: nowrap; */
     overflow: hidden;
-    text-overflow: ellipsis;
+    /* text-overflow: ellipsis; */
+}
+
+.followers_posts {
+    /* white-space: nowrap; */
+    overflow: hidden;
+    /* text-overflow: ellipsis; */
 }
 
 .badge {
@@ -45,5 +52,6 @@ div.content p {
 }
 
 .badge img {
-    height: 20px; width: 20px;
+    height: 20px;
+    width: 20px;
 }
