--- a/src/app/card/group-card/group-card.component.css
+++ b/src/app/card/group-card/group-card.component.css
@@ -1,10 +1,175 @@
-mat-card {
-    background-color: transparent;
+div.block {
+    margin: 10px;
+    border-radius: 15px;
 }
+
+.icon_more {
+    vertical-align: auto;
+}
+
+.content {
+    display: inline-block;
+}
+
+.my-card__media {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    /* background: linear-gradient(45deg, rgba(43.16927966, 43.4529661, 77.12881356, 1) 0%, rgba(53.48020219, 68.78011794, 110.77908107, 1) 50%,
+
+            rgba(177.83865475, 152.25159642, 126.74286931, 1) 100%); */
+    /* background: linear-gradient(rgba(55, 121, 202, 0.3) 100%, rgba(173, 113, 113, 0.3) 100%); */
+
+    background-size: cover, cover;
+    /* background: rgba(238, 7, 7, 0.2); */
+    filter: blur(10px);
+}
+
+/* rgba(249.10896008, 166.25663868, 127.9835532, 1) 60%, */
+
+
+.my-card__media:before {
+    /* content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: inherit;
+    z-index: -1;
+
+    filter: blur(20px); */
+    /* -webkit-filter: blur(20px); */
+
+}
+
+.mdc-card__media-content {
+    position: relative;
+    color: white !important;
+    /* font-weight: bold; */
+    /* bottom: 0; */
+}
+
+.block {
+    position: relative;
+
+}
+
 
 #subtitle {
     max-width: 85%;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+}
+
+
+
+
+
+div.card {
+    padding: 10px;
+    padding-bottom: 8px;
+    width: 100%;
+}
+
+table.card-table {
+    table-layout: fixed;
+    width: 100%;
+}
+
+.avatar {
+    width: 50px;
+    vertical-align: top;
+}
+
+.avatar img {
+    height: 50px;
+    width: 50px;
+    background: url('assets/lotus_placeholder.png') no-repeat;
+    background-size: contain;
+}
+
+.content {
+    margin: 0;
+    margin-left: 5px;
+    font-size: 0.9em;
+    width: 100%;
+}
+
+div.content p {
+    margin: 0.3em 0;
+    width: calc(100% - 2em);
+}
+
+
+
+.card-sub-title {
+    /* white-space: nowrap; */
+    overflow: hidden;
+    /* text-overflow: ellipsis; */
+}
+
+.followers_posts {
+    /* white-space: nowrap; */
+    overflow: hidden;
+    /* text-overflow: ellipsis; */
+}
+
+.badge {
+    width: 30px;
+    padding-right: 5px;
+}
+
+.badge img {
+    height: 20px;
+    width: 20px;
+}
+
+
+.title {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 140%;
+    /* or 22px */
+
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.0015em;
+    padding: 0;
+    margin: 0;
+
+    /* Ref/Primary/Primary100 */
+
+    color: #FFFFFF;
+
+}
+
+.followers {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 140%;
+    /* identical to box height, or 17px */
+    margin: 0;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.4px;
+
+    color: rgba(255, 255, 255, 0.87);
+}
+
+.about {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
+    /* or 133% */
+
+    letter-spacing: 0.4px;
+
+    color: #FFFFFF;
+
 }
