Show group details on the group feed page
The details of group selected can now being shown (currently as a demo) on the group-feed page.

--- a/src/app/layout/desktop-split/desktop-split.component.html
+++ b/src/app/layout/desktop-split/desktop-split.component.html
@@ -1,4 +1,5 @@
-<div [ngClass]="{'center-comp' : !isGroup, 'center-comp-group' : isGroup }"
+<div class="center-comp" 
+  [ngStyle]="{ 'width': center_width_percentage+'%' }"
   [hidden]="hideOnMobile === 1 && dataService.isMobile()" [class.rightborder]="centerRightBorder">
   <ng-content select="[center]"></ng-content>
 </div>
