--- a/src/app/layout/event-sidebar-desktop/event-sidebar-desktop.component.html
+++ b/src/app/layout/event-sidebar-desktop/event-sidebar-desktop.component.html
@@ -1,4 +1,4 @@
-<app-desktop-split [isGroup]="isgrouppage">
+<app-desktop-split [isGroup]="isgrouppage" center_width_percentage="63">
     <div center>
         <ng-content></ng-content>
     </div>
