--- a/src/app/page/discussions/discussions.component.html
+++ b/src/app/page/discussions/discussions.component.html
@@ -92,12 +92,12 @@
 
 
 
-        <div right class="desktop-right">
+        <!-- <div right class="desktop-right">
 
 
 
 
-        </div>
+        </div> -->
 
 
 
