Update communitypost-card to show sub-comments
Based on a passed boolean parameter, communitypost-card now decides whether or not to render the comments attached to the given post object.

--- a/src/app/card/communitypost-card/communitypost-card.component.css
+++ b/src/app/card/communitypost-card/communitypost-card.component.css
@@ -161,3 +161,9 @@ span {
 .inline {
     display: inline;
 }
+
+.comment-thread-container {
+    display: inline-block;
+    border-left: 1px solid rgb(184, 182, 182);
+    padding-left: 12px;
+}
