--- a/src/app/page/discussions/post-view/post-view.component.html
+++ b/src/app/page/discussions/post-view/post-view.component.html
@@ -1,1 +1,15 @@
-<p>post-view works!</p>
+<app-xunk-spinner *ngIf="!post"></app-xunk-spinner>
+
+<app-event-sidebar-desktop *ngIf="post" [isgrouppage]="true" [group]="group">
+
+    <div center id="main-post-container">
+
+        <app-communitypost-card [post]="post" show_comment_thread="true">
+
+        </app-communitypost-card>
+
+
+    </div>
+
+
+</app-event-sidebar-desktop>
