--- a/src/app/card/communitypost-card/communitypost-card.component.css
+++ b/src/app/card/communitypost-card/communitypost-card.component.css
@@ -15,6 +15,8 @@ div.postmain {
 }
 
 .avatar img {
+    position: relative;
+
     height: 38px;
     width: 38px;
     background: url('assets/lotus_placeholder.png') no-repeat;
@@ -22,7 +24,7 @@ div.postmain {
 }
 
 .user_date {
-    left: 10px;
+    position: relative;
 }
 
 .user {
@@ -163,7 +165,11 @@ span {
 }
 
 .comment-thread-container {
+    padding-left: 12px;
+}
+
+.comment-thread-subcontainer {
     display: inline-block;
     border-left: 1px solid rgb(184, 182, 182);
-    padding-left: 12px;
+    padding-left: 6px;
 }
