--- a/src/app/card/communitypost-card/communitypost-card.component.html
+++ b/src/app/card/communitypost-card/communitypost-card.component.html
@@ -10,14 +10,25 @@
 
       <td align="left" class="avatar">
         <ng-container *ngIf="post.posted_by.profile_pic; else default_avatar">
-          <img [src]="post.posted_by.profile_pic" class="img-circle object-cover">
+          <img 
+            [src]="post.posted_by.profile_pic" 
+            class="img-circle object-cover"
+            [ngStyle]="{ 'left': '-38px' }"
+          >
         </ng-container>
         <ng-template #default_avatar>
-          <img src="assets/logo.png" class="img-circle object-cover" />
+          <img 
+            src="assets/logo.png" 
+            class="img-circle object-cover"
+            [ngStyle]="{ 'left.px': pic_name_offset }"
+          >
         </ng-template>
       </td>
 
-      <td class="user_date">
+      <td 
+        class="user_date"
+        [ngStyle]="{ 'left.px': pic_name_offset }"
+      >
         <p class="user">{{ post.posted_by.name }}</p>
         <p class="date"> {{ printable_date }}</p>
       </td>
@@ -92,13 +103,13 @@
       </tr>
     </table>
 
-    <ng-container *ngIf="show_comment_thread" >
-      <div class="comment-thread-container">
+    <div *ngIf="show_comment_thread" class="comment-thread-container">
+      <div class="comment-thread-subcontainer">
         <ng-container *ngFor="let comment of post.comments">
           <app-communitypost-card [post]="comment" show_comment_thread="true"></app-communitypost-card>
         </ng-container>
       </div>
-    </ng-container>
+    </div>
   </div>
 
 </div>
