--- a/src/app/card/communitypost-card/communitypost-card.component.css
+++ b/src/app/card/communitypost-card/communitypost-card.component.css
@@ -1,3 +1,11 @@
+.clickable{
+    cursor: pointer;
+}
+
+.gray-fill-btn{
+    color: #767881;
+}
+
 div.postmain {
     /* display: flex; */
     flex-direction: column;
@@ -18,6 +26,7 @@ div.postmain {
     position: relative;
 
     border: 4px solid white;
+    /* border: 4px solid black; */
     border-radius: 500px; /* any ridiculously large radius would work for making a circle, apparently*/
     
     height: 38px;
@@ -84,6 +93,8 @@ p {
     display: initial;
     overflow: auto;
     padding: 5px;
+
+    vertical-align: middle;
 }
 
 table {
@@ -138,11 +149,13 @@ span {
     /* width: 100%; */
 
 
+    height: 40px;
     padding: 10px;
-    margin: -10px;
+    margin: 0px -10px -10px -10px;
 
     /* border-radius: 15px; */
-    box-shadow: 0px 3px 30px -18px #000000;
+    background: #FFFFFF;
+    box-shadow: 0px -6px 30px -27px #000000;
     /* margin: 5px; */
 }
 
@@ -200,9 +213,10 @@ span {
 
 .comment-thread-container {
     padding-left: 12px;
+    margin-right: -20px;
 }
 
 .comment-thread-subcontainer {
-    border-left: 2px solid rgb(184, 182, 182);
+    border-left: 1px solid #C7C7C7;
     /* padding-left: 6px; */
 }
