Add surprise emoji to communitypost-card

--- a/src/app/card/communitypost-card/communitypost-card.component.html
+++ b/src/app/card/communitypost-card/communitypost-card.component.html
@@ -35,7 +35,9 @@
         [ngStyle]="{ 'left.px': name_offset }"
       >
         <p class="user">{{ post.posted_by.name }}</p>
-        <p class="date"> {{ printable_date }}</p>
+        <p 
+          class="date"
+        > {{ printable_date }}</p>
       </td>
       <td align="right">
         <mat-icon class="icon_more clickable">more_vert</mat-icon>
@@ -79,6 +81,7 @@
             <img class="emoji noResponse" src='assets/emojis/angry_emoji.png' alt='x'>
             <img class="emoji noResponse" src='assets/emojis/laugh_emoji.png' alt='x'>
             <img class="emoji noResponse" src='assets/emojis/sad_emoji.png' alt='x'>
+            <img class="emoji noResponse" src='assets/emojis/wow_emoji.png' alt='x'>
           </div>
 
 
