--- a/src/app/card/communitypost-card/communitypost-card.component.css
+++ b/src/app/card/communitypost-card/communitypost-card.component.css
@@ -156,6 +156,8 @@ span {
     /* border-radius: 15px; */
     background: #FFFFFF;
     box-shadow: 0px -6px 30px -27px #000000;
+
+    border-radius: 0 0 15px 15px;
     /* margin: 5px; */
 }
 
