--- a/src/app/layout/desktop-split/desktop-split.component.html
+++ b/src/app/layout/desktop-split/desktop-split.component.html
@@ -1,10 +1,9 @@
 <div class="center-comp" 
-  [ngStyle]="{ 'width': center_width_percentage+'%' }"
-  [hidden]="hideOnMobile === 1 && dataService.isMobile()" [class.rightborder]="centerRightBorder">
+ [hidden]="hideOnMobile === 1 && dataService.isMobile()" [class.rightborder]="centerRightBorder">
   <ng-content select="[center]"></ng-content>
 </div>
 
-<div [ngClass]="{'right-comp' : !isGroup, 'right-comp-group' : isGroup }"
+<div class="right-comp" 
   [hidden]="hideOnMobile === 2 && dataService.isMobile()" [class.leftborder]="rightLeftBorder">
   <ng-content select="[right]"></ng-content>
 </div>
