--- a/src/app/card/communitypost-card/communitypost-card.component.html
+++ b/src/app/card/communitypost-card/communitypost-card.component.html
@@ -137,4 +137,7 @@
     </div>
   </div>
 
+  <div *ngIf="more_comments" class="btn_view-more-comments clickable">
+    <p>View more comments</p>
+  </div>
 </div>
